--- a/research/data_transformation.ipynb
+++ b/research/data_transformation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +148,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-11-02 01:23:38,542 - INFO - common - yaml file : config\\config.yaml loaded successfully]\n",
+      "the content is : {content}, for yaml file : {yaml_file}\n",
+      "[2024-11-02 01:23:38,542 - INFO - common - yaml file : params.yaml loaded successfully]\n",
+      "the content is : {content}, for yaml file : {yaml_file}\n",
+      "[2024-11-02 01:23:38,549 - INFO - common - yaml file : schema.yaml loaded successfully]\n",
+      "the content is : {content}, for yaml file : {yaml_file}\n",
+      "[2024-11-02 01:23:38,550 - INFO - common - directory : artifacts created successfully]\n",
+      "[2024-11-02 01:23:38,550 - INFO - common - directory : artifacts/data_transformation created successfully]\n",
+      "[2024-11-02 01:23:38,579 - INFO - 2258365825 - train test split complete]\n",
+      "[2024-11-02 01:23:38,579 - INFO - 2258365825 - train shape (1279, 12)]\n",
+      "[2024-11-02 01:23:38,579 - INFO - 2258365825 - test shape (320, 12)]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
