--- a/research/model_trainer.ipynb
+++ b/research/model_trainer.ipynb
@@ -53,7 +53,7 @@
     "    root_dir: Path\n",
     "    train_data_path: Path\n",
     "    test_data_path: Path\n",
-    "    model_path: str\n",
+    "    metrics_path: Path\n",
     "    alpha: float\n",
     "    l1_ratio: float\n",
     "    target_col: str\n"
@@ -178,27 +178,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-11-03 01:32:33,257 - INFO - common - yaml file : config\\config.yaml loaded successfully]\n",
+      "[2024-11-03 01:33:11,298 - INFO - common - yaml file : config\\config.yaml loaded successfully]\n",
       "the content is : {content}, for yaml file : {yaml_file}\n",
-      "[2024-11-03 01:32:33,257 - INFO - common - yaml file : params.yaml loaded successfully]\n",
+      "[2024-11-03 01:33:11,299 - INFO - common - yaml file : params.yaml loaded successfully]\n",
       "the content is : {content}, for yaml file : {yaml_file}\n",
-      "[2024-11-03 01:32:33,259 - INFO - common - yaml file : schema.yaml loaded successfully]\n",
+      "[2024-11-03 01:33:11,299 - INFO - common - yaml file : schema.yaml loaded successfully]\n",
       "the content is : {content}, for yaml file : {yaml_file}\n",
-      "[2024-11-03 01:32:33,260 - INFO - common - directory : artifacts created successfully]\n",
-      "[2024-11-03 01:32:33,261 - INFO - common - directory : artifacts/model_trainer created successfully]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'ModelTrainer' object has no attribute 'root_dir'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 12\u001b[0m\n\u001b[0;32m      8\u001b[0m     model_trainer\u001b[38;5;241m.\u001b[39mtrain_model()\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[9], line 8\u001b[0m\n\u001b[0;32m      4\u001b[0m     model_trainer_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_model_trainer()\n\u001b[0;32m      6\u001b[0m     model_trainer \u001b[38;5;241m=\u001b[39m ModelTrainer(model_trainer_config)\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mmodel_trainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[8], line 23\u001b[0m, in \u001b[0;36mModelTrainer.train_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     19\u001b[0m lr \u001b[38;5;241m=\u001b[39m ElasticNet(alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39malpha,l1_ratio\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39ml1_ratio,random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[0;32m     21\u001b[0m lr\u001b[38;5;241m.\u001b[39mfit(train_x,train_y)\n\u001b[1;32m---> 23\u001b[0m joblib\u001b[38;5;241m.\u001b[39mdump(lr,os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mroot_dir\u001b[49m,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mmodel_path))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ModelTrainer' object has no attribute 'root_dir'"
+      "[2024-11-03 01:33:11,299 - INFO - common - directory : artifacts created successfully]\n",
+      "[2024-11-03 01:33:11,299 - INFO - common - directory : artifacts/model_trainer created successfully]\n"
      ]
     }
    ],
